platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_55.platter
piece of x = 3;

start(){
    repeat[x < 5]{
        serve x;
    }
}